# codex

./: CHANGELOG.md  LOCAL_BUILD.md  README.md
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server/src/: bespoke_event_handling.rs  in_process.rs  lib.rs  thread_status.rs
codex-rs/cli/: Cargo.toml
codex-rs/code-mode-protocol/src/: description.rs
codex-rs/config/src/: config_toml.rs
codex-rs/coordination/: BUILD.bazel  Cargo.toml
codex-rs/coordination/src/: checked.rs  checked_tests.rs  compatibility.rs  compatibility_tests.rs  event.rs  event_causality.rs  event_causality_tests.rs  event_fixture_tests.rs  event_invariants.rs  evidence.rs  evidence_tests.rs  lib.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: agent_communication.rs  codex_delegate.rs  codex_delegate_tests.rs  lib.rs  mcp_tool_call.rs  mcp_tool_call_tests.rs  session_prefix.rs  session_prefix_tests.rs  thread_manager.rs
codex-rs/features/src/: lib.rs  tests.rs
codex-rs/protocol/src/: models.rs  plan_tool.rs
codex-rs/rollout/: Cargo.toml
codex-rs/rollout/src/: lib.rs  policy.rs  state_db.rs  state_db_tests.rs
codex-rs/state/: Cargo.toml
codex-rs/state/migrations/: 0041_delegations.sql  0042_delegation_delivery_outbox.sql  0043_delegation_reconciliation_leases.sql  0044_delegation_retention.sql  0046_coordination_authority_and_journal.sql  0047_coordination_assignment_aggregates.sql  0048_coordination_commands.sql  0049_coordination_inbox.sql  0050_coordination_recovery.sql  0051_coordination_inclusion_recovery_transition.sql  (+2 more)
(+288 files in other folders)
